--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
   </head>
   <body>
     <h2>Where I'm from</h2>
-    <img src="360_F_321704592_azoD811yWmGtGixdjW2koEM1i4ZSksyA.jpg" alt="my country flag">
+    <img src="pic1.png" alt="my country flag">
     <br>
     <p>I am from Bangladesh, a country from south asia.</p>
       <br><br><br><br><br>  
     <h2>What school do I go to</h2>
-    <img src="images-(3).png" alt="Stoller logo">
+    <img src="pic2.png" alt="Stoller logo">
     <br><br><br><br><br>  
     <p>I go to Stoller middle school, a school in the Beaverton School district.</p>
     <br><br><br><br><br><br>
@@ -21,7 +21,7 @@
     <li>Software engineer</li>
     <h2>What universities I want to go to</h2>
     <p>I want to go to the following</p>
-    <img src="MIT-logo.png" alt="MIT logo">
+    <img src="pic3.png" alt="MIT logo">
     <br><br><br><br><br>  
     <li>MIT</li>
     <li>Standford</li>  
@@ -29,7 +29,7 @@
     <h2>What sport I play and medals</h2>  
     <p>I play soccer because I like the sport.</p>
     <h3>Soccer Medals</h3>
-    <img src="7e16f0_cc2072d5b7a44ed89e09bde6c6332bd8-mv2.png" alt="Pcu summer classic medal">
+    <img src="pic4.png" alt="Pcu summer classic medal">
     <li>Mt Hood Challenge (2nd place)</li>
     <li>PCU Summer Classic (2nd place)</li>
     <br><br><br><br><br>  <br><br><br><br><br>  <br><br><br><br><br><br><br>
